<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
                name="viewModel"
                type="com.zaphlabs.knotty_online.ui.editor.EditorViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.editor.EditorActivity">

        <include
                android:id="@+id/AlterAccountToolbar"
                layout="@layout/layout_toolbar" />

        <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation_view"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/AlterAccountToolbar"
                app:lottie_autoPlay="true"
                app:lottie_fileName="addData.json"
                app:lottie_loop="true" />

        <com.zaphlabs.knotty_online.ui.customView.MaterialEditText
                android:id="@+id/metAccountTitle"
                style="@style/edit_text_view"
                android:text="@={viewModel.accountTitle}"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:hint="@string/account_title_text"
                android:inputType="textCapWords"
                app:layout_constraintTop_toBottomOf="@id/animation_view"
                app:met_floatingLabelText="Account Title" />

        <com.zaphlabs.knotty_online.ui.customView.MaterialEditText
                android:id="@+id/metAccountUserName"
                style="@style/edit_text_view"
                android:text="@={viewModel.accountUserName}"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:hint="@string/account_user_name_text"
                app:layout_constraintTop_toBottomOf="@id/metAccountTitle"
                app:met_floatingLabelText="Account User Name" />

        <com.zaphlabs.knotty_online.ui.customView.MaterialEditText
                android:id="@+id/metAccountPassword"
                style="@style/edit_text_view"
                android:layout_width="match_parent"
                android:text="@={viewModel.accountPassword}"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:hint="@string/account_password"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@id/metAccountUserName"
                app:met_floatingLabelText="Account Password" />

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPasswordView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_padding_size_large"
                android:padding="@dimen/margin_padding_size_small"
                android:src="@drawable/ic_hide_pass"
                app:layout_constraintBottom_toBottomOf="@id/metAccountPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/metAccountPassword" />

        <com.zaphlabs.knotty_online.ui.customView.MaterialEditText
                android:id="@+id/metAccountEmail"
                style="@style/edit_text_view"
                android:layout_width="match_parent"
                android:text="@={viewModel.accountEmail}"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:hint="@string/account_email_text"
                app:layout_constraintTop_toBottomOf="@id/metAccountPassword"
                app:met_floatingLabelText="Account Email" />

        <com.zaphlabs.knotty_online.ui.customView.MaterialEditText
                android:id="@+id/metAccountNote"
                style="@style/edit_text_view"
                android:layout_width="match_parent"
                android:text="@={viewModel.accountNote}"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:hint="@string/note_text"
                app:layout_constraintTop_toBottomOf="@id/metAccountEmail"
                app:met_floatingLabelText="Note" />

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnAlterAccount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(v) -> viewModel.performAction()}"
                android:layout_margin="@dimen/margin_padding_size_large"
                android:background="@drawable/selector_btn"
                android:text="@string/save_account_text"
                android:textAppearance="@style/CustomTextAppearance.Semibold"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/metAccountNote" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>