<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <include layout="@layout/layout_toolbar"
            android:id="@+id/logInToolbar"/>

    <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animation_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:lottie_fileName="login.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/log_in_text"
            android:text="@string/log_in_text"
            android:textSize="@dimen/font_xxlarge"
            android:textAppearance="@style/MontserratBold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/margin_padding_size_large"/>


    <com.zaphlabs.knotty_online.ui.customView.MaterialEditText
            android:layout_width="match_parent"
            style="@style/edit_text_view"
            android:hint="@string/password_text"
            android:id="@+id/metLogInPassword"
            app:met_floatingLabelText="PASSWORD"
            android:inputType="textPassword"
            android:layout_marginTop="@dimen/margin_padding_size_large"
            app:layout_constraintTop_toBottomOf="@id/log_in_text"
            app:layout_constraintBottom_toTopOf="@id/btnLogIn"
            />

    <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn"
            android:layout_margin="@dimen/margin_padding_size_large"
            android:text="@string/log_in_text"
            android:id="@+id/btnLogIn"
            android:textColor="@color/white"
            android:textAppearance="@style/MontserratSemiBold"
            app:layout_constraintTop_toBottomOf="@id/metLogInPassword"
            />

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/forgotPasswordText"
            android:text="@string/forgot_password_text"
            android:textSize="@dimen/font_large"
            android:textAppearance="@style/MontserratBold"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_padding_size_medium"
            android:layout_marginEnd="@dimen/margin_padding_size_large"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/orText"
            android:text="OR"
            android:gravity="center"
            android:textSize="@dimen/font_large"
            android:textAppearance="@style/MontserratBold"
            app:layout_constraintTop_toBottomOf="@id/btnLogIn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/margin_padding_size_xlarge"
            android:layout_marginEnd="@dimen/margin_padding_size_large"
            android:layout_marginStart="@dimen/margin_padding_size_large"/>

    <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:id="@+id/ivFingerprint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/orText"
            android:src="@mipmap/ic_fingerprint"
            />


</androidx.constraintlayout.widget.ConstraintLayout>